# firecrawl-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.firecrawl/: just-bash.md  lobehub-icons-list.md  lobehub-icons-skill.md
.github/workflows/: ci.yml
.internal/agent-core-py/: pyproject.toml
.internal/agent-core-py/src/firecrawl_agent/: __init__.py  agent.py  prompts.py  types.py
.internal/agent-core-py/src/firecrawl_agent/prompts/: skills.md  system.md
.internal/agent-core-py/tests/: test_agent.py  test_prompts.py  test_types.py
.internal/cli/: README.md
.internal/scripts/: sync-agent-core.mjs
__tests__/evals/: runner.ts
agent-core/: README.md  openapi.yaml  package.json  tsup.config.ts
agent-core/examples/: 1-basic.ts  2-structured-output.ts  3-parallel-subagents.ts  4-with-skills.ts  5-streaming.ts
agent-core/src/: agent.ts  index.ts  orchestrator.ts  resolve-model.test.ts  resolve-model.ts  sub-agents.ts  toolkit.ts  tools.test.ts  tools.ts  types.ts
agent-examples/: README.md
agent-examples/cpp/: README.md
agent-examples/csharp/: README.md
agent-examples/curl/: run.sh
agent-examples/dart/: README.md  main.dart
agent-examples/java/: Main.java
agent-examples/php/: README.md  main.php
agent-templates/: README.md
app/: page.tsx
cli/: agent-manifest.json
deploy/: README.md
examples/: README.md
lib/: types.ts
scripts/: generate-sdks.sh
sdks/: README.md
styles/: main.css
templates/: README.md
(+1300 files in other folders)
